--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -52,7 +52,8 @@ dependencies:
   intl: ^0.19.0
   localstorage: ^5.0.0
   jwt_decoder: ^2.0.1
-  reorderables: ^0.6.0
+  flutter_slidable: ^3.1.0
+  fluttertoast: ^8.2.5
 
 dev_dependencies:
   flutter_test:
