--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -54,7 +54,16 @@ dependencies:
   jwt_decoder: ^2.0.1
   flutter_slidable: ^3.1.0
   fluttertoast: ^8.2.5
-
+  flutter_list_view: ^1.1.27
+  flutter_html: ^3.0.0-beta.2
+  image_picker: ^1.1.1
+  path_provider: ^2.1.3
+  camera: ^0.11.0+1
+  external_path: ^1.0.3
+  gap: ^3.0.1
+  media_scanner: ^2.1.0
+  flutter_gemini: ^2.0.4
+  flutter_markdown: ^0.7.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
