--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -10,7 +10,8 @@
     "strict": true,
     "skipLibCheck": true,
     "typeRoots": ["types"],
+
     "resolveJsonModule": true
   },
-  "include": ["./*.js", "src/**/*.ts", "test/**/*.ts"]
+  "include": ["./*.js", "src/**/*.ts", "test/**/*.ts", "./prisma/seed.ts", "./seed.ts"]
 }
