--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -58,12 +58,13 @@ dependencies:
   flutter_html: ^3.0.0-beta.2
   image_picker: ^1.1.1
   path_provider: ^2.1.3
-  camera: ^0.11.0+1
+  camera: ^0.10.5+9
   external_path: ^1.0.3
   gap: ^3.0.1
   media_scanner: ^2.1.0
   flutter_gemini: ^2.0.4
   flutter_markdown: ^0.7.1
+  permission_handler: ^11.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
