--- a/api/vercel.json
+++ b/api/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "src/index.js",
       "use": "@now/node"
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "src"
+      "src": "/(.*)",
+      "dest": "src/index.ts"
     }
   ]
 }
