--- a/api/package.json
+++ b/api/package.json
@@ -41,6 +41,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/mocha": "^10.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.12",
     "@types/pg": "^8.11.6",
