--- a/api/package.json
+++ b/api/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
-    "build": "tsc  build --output public",
+    "build": "rimraf dist && tsc",
     "start:dist": "node dist/src/index.js",
     "lint": "eslint --fix src test",
     "test": "jest",
     "typecheck": "tsc --noEmit"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
@@ -54,7 +59,9 @@
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
+    "pre-commit": "^1.2.2",
     "prisma": "^5.13.0",
+    "rimraf": "^5.0.7",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
