--- a/api/.gitignore
+++ b/api/.gitignore
@@ -60,6 +60,8 @@ typings/
 # dotenv environment variables file
 .env
 
+/api/data/nutritions.json
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
